# verified_ocaml_gc

./: LICENSE  README.md  diff-extracted-code-and-integrated-code.sh  diff-proofs-and-extractable-verified-code.sh
ExtractableVerifiedCode/: Makefile  Makefile.include  alias.h
ExtractedCodeIntegratedWithRuntime/: Makefile  original-runtime-changes-for-bdwgc-integration.diff  original-runtime-changes-for-verified-gc-integration.diff
ExtractedCodeIntegratedWithRuntime/ocaml-4.14-hacked-gc/runtime/verified_gc/allocator/: Cargo.toml  binarytree.cpp
ExtractedCodeIntegratedWithRuntime/ocaml-4.14-hacked-gc/runtime/verified_gc/allocator/benches/: benchmark.rs
ExtractedCodeIntegratedWithRuntime/ocaml-4.14-hacked-gc/runtime/verified_gc/allocator/src/: header.rs  lib.rs  utils.rs  value.rs
ExtractedCodeIntegratedWithRuntime/ocaml-4.14-hacked-gc/runtime/verified_gc/allocator/src/freelist/: pool.rs
Proofs/: .gitignore  DFS2.fst  Impl.GC_closure_infix_ver3.fst  Impl.GC_closure_infix_ver3.fsti  Makefile  Spec.GC_infix_closure_ver3.fst  Spec.GC_infix_closure_ver3.fsti  Spec.GC_part01.fst  Spec.GC_part01.fsti  Spec.GC_part02.fst  Spec.GC_part02.fsti  Spec.GC_part02_01.fst  Spec.GC_part02_01.fsti  Spec.GC_part02_02.fst  Spec.GC_part02_02.fsti  Spec.GC_part03.fsti  Spec.GC_part04.fsti  Spec.GC_part05.fsti  Spec.GC_part06.fsti  Spec.GC_part07.fsti  Spec.GC_part08.fsti  Spec.GC_part09.fsti  Spec.GC_part1.fsti  Spec.GC_part10.fsti  Spec.GC_part11.fsti  Spec.GC_part12.fsti  Spec.GC_part13.fsti  Spec.GC_part14.fsti  Spec.GC_part15.fsti  Spec.GC_part16.fsti  Spec.GC_part2.fsti  (+9 more)
(+452 files in other folders)
